# mattis

./: .gitignore  Cargo.toml  bishop_magics  build.rs  perftsuite.epd  readme.md  rook_magics  rustfmt.toml  uci-spec.txt
benches/: perft_bench.rs
mattis/: Cargo.toml  build.rs
mattis-bitboard/: Cargo.toml
mattis-bitboard/src/: lib.rs
mattis-tablegen/: Cargo.toml
mattis-tablegen/src/: lib.rs
mattis-types/: Cargo.toml
mattis-types/src/: lib.rs
mattis-uci/: Cargo.toml
mattis/benches/: perft_bench.rs
mattis/src/: board.rs  eval.rs  hashtable.rs  lib.rs  main.rs  notation.rs  perft.rs  search.rs  tables.rs  time_man.rs  uci.rs
mattis/src/board/: movegen.rs
mattis/src/search/: history.rs  killers.rs  lazy_smp.rs
src/: bitboard.rs  board.rs  chess_move.rs  eval.rs  hashtable.rs  lib.rs  main.rs  moves.rs  notation.rs  search.rs  tables.rs  time_man.rs  tptable.rs  types.rs  uci.rs
src/board/: makemove.rs  movegen.rs
tables_gen/: Cargo.toml
tables_gen/src/: lib.rs  main.rs
