[package]
name = "mattis"
version = "0.1.0"
edition = "2021"
default-run = "mattis"

[[bench]]
name = "perft_bench"
harness = false

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
lazy_static = "1.4.0"
num_enum = { version = "0.6.1", features = ["complex-expressions"] } 
rand = "0.8.5"
thiserror = "1.0.40"
