[workspace]
members = [".", "mattis-bitboard", "mattis-types"]

[package]
name = "mattis"
version = "2.0.0"
edition = "2021"
default-run = "mattis"

[[bench]]
name = "perft_bench"
harness = false

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
smallvec = "1.13.1"
thiserror = "1.0.57"
mattis-types = { path = "mattis-types" }
mattis-bitboard = { path = "mattis-bitboard" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
