
[package]
name = "mattis"
version = "2.0.0"
edition = "2021"
default-run = "mattis"

[[bench]]
name = "perft_bench"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
rand = "0.8.5"
smallvec = "1.13.1"
thiserror = "1.0.57"
mattis-types = { path = "../mattis-types" }
mattis-bitboard = { path = "../mattis-bitboard" }
ctor = "0.2.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
