[package]
name = "tables_gen"
version = "0.1.0"
edition = "2021"
default-run = "tables_gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mattis-types = { path = "../mattis-types" }
mattis-bitboard = { path = "../mattis-bitboard" }
rand = "0.8.5"
lazy_static = "1.4.0"
bytemuck = "1.15.0"
